Proyecto1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> INSTIPO
Rule 5     instruccion -> INSTEXTO
Rule 6     instruccion -> INSTFUNCION
Rule 7     instruccion -> INSTESTILO
Rule 8     INSTIPO -> LLAA RTIPO LLAC instrucciones_2 LLAA DIV RTIPO LLAC
Rule 9     INSTEXTO -> LLAA RTEXTO LLAC CADENA LLAA DIV RTEXTO LLAC
Rule 10    INSTFUNCION -> LLAA RFUNCION IGUAL RESCRIBIR LLAC instrucciones_2 LLAA DIV RFUNCION LLAC
Rule 11    INSTESTILO -> LLAA RESTILO LLAC instrucciones_2 LLAA DIV RESTILO LLAC
Rule 12    instrucciones_2 -> instrucciones_2 instruccion_2
Rule 13    instrucciones_2 -> instruccion_2
Rule 14    instruccion_2 -> LLAA ROPERACION IGUAL tipo LLAC instrucciones_2 LLAA DIV ROPERACION LLAC
Rule 15    instruccion_2 -> LLAA RNUMERO LLAC DECIMAL LLAA DIV RNUMERO LLAC
Rule 16    instruccion_2 -> LLAA RNUMERO LLAC ENTERO LLAA DIV RNUMERO LLAC
Rule 17    instruccion_2 -> CADENA
Rule 18    instruccion_2 -> LLAA RTITULO LLAC ROPERACIONES LLAA DIV RTITULO LLAC
Rule 19    instruccion_2 -> LLAA RDESCRIPCION LLAC CORA RTEXTO2 CORC LLAA DIV RDESCRIPCION LLAC
Rule 20    instruccion_2 -> LLAA RCONTENIDO LLAC CORA RTIPO2 CORC LLAA DIV RCONTENIDO LLAC
Rule 21    instruccion_2 -> LLAA RTITULO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
Rule 22    instruccion_2 -> LLAA RDESCRIPCION RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
Rule 23    instruccion_2 -> LLAA RCONTENIDO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
Rule 24    COLOR -> RAZUL
Rule 25    COLOR -> RVERDE
Rule 26    COLOR -> RROJO
Rule 27    COLOR -> RNEGRO
Rule 28    COLOR -> RBLANCO
Rule 29    COLOR -> RGRIS
Rule 30    COLOR -> RCELESTE
Rule 31    COLOR -> RCAFE
Rule 32    tipo -> RSUMA
Rule 33    tipo -> RRESTA
Rule 34    tipo -> RMULTIPLICACION
Rule 35    tipo -> RDIVISION
Rule 36    tipo -> RINVERSO

Terminals, with rules where they appear

CADENA               : 9 17
CORA                 : 19 20
CORC                 : 19 20
DECIMAL              : 15
DIV                  : 8 9 10 11 14 15 16 18 19 20 21 22 23
ENTERO               : 16 21 22 23
IGUAL                : 10 14 21 21 22 22 23 23
LLAA                 : 8 8 9 9 10 10 11 11 14 14 15 15 16 16 18 18 19 19 20 20 21 22 23
LLAC                 : 8 8 9 9 10 10 11 11 14 14 15 15 16 16 18 18 19 19 20 20 21 22 23
RAZUL                : 24
RBLANCO              : 28
RCAFE                : 31
RCELESTE             : 30
RCOLOR               : 21 22 23
RCONTENIDO           : 20 20 23
RDESCRIPCION         : 19 19 22
RDIVISION            : 35
RESCRIBIR            : 10
RESTILO              : 11 11
RFUNCION             : 10 10
RGRIS                : 29
RINVERSO             : 36
RMULTIPLICACION      : 34
RNEGRO               : 27
RNUMERO              : 15 15 16 16
ROPERACION           : 14 14
ROPERACIONES         : 18
RRESTA               : 33
RROJO                : 26
RSUMA                : 32
RTAMANIO             : 21 22 23
RTEXTO               : 9 9
RTEXTO2              : 19
RTIPO                : 8 8
RTIPO2               : 20
RTITULO              : 18 18 21
RVERDE               : 25
error                : 

Nonterminals, with rules where they appear

COLOR                : 21 22 23
INSTESTILO           : 7
INSTEXTO             : 5
INSTFUNCION          : 6
INSTIPO              : 4
init                 : 0
instruccion          : 2 3
instruccion_2        : 12 13
instrucciones        : 1 2
instrucciones_2      : 8 10 11 12 14
tipo                 : 14

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . INSTIPO
    (5) instruccion -> . INSTEXTO
    (6) instruccion -> . INSTFUNCION
    (7) instruccion -> . INSTESTILO
    (8) INSTIPO -> . LLAA RTIPO LLAC instrucciones_2 LLAA DIV RTIPO LLAC
    (9) INSTEXTO -> . LLAA RTEXTO LLAC CADENA LLAA DIV RTEXTO LLAC
    (10) INSTFUNCION -> . LLAA RFUNCION IGUAL RESCRIBIR LLAC instrucciones_2 LLAA DIV RFUNCION LLAC
    (11) INSTESTILO -> . LLAA RESTILO LLAC instrucciones_2 LLAA DIV RESTILO LLAC

    LLAA            shift and go to state 8

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    INSTIPO                        shift and go to state 4
    INSTEXTO                       shift and go to state 5
    INSTFUNCION                    shift and go to state 6
    INSTESTILO                     shift and go to state 7

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . INSTIPO
    (5) instruccion -> . INSTEXTO
    (6) instruccion -> . INSTFUNCION
    (7) instruccion -> . INSTESTILO
    (8) INSTIPO -> . LLAA RTIPO LLAC instrucciones_2 LLAA DIV RTIPO LLAC
    (9) INSTEXTO -> . LLAA RTEXTO LLAC CADENA LLAA DIV RTEXTO LLAC
    (10) INSTFUNCION -> . LLAA RFUNCION IGUAL RESCRIBIR LLAC instrucciones_2 LLAA DIV RFUNCION LLAC
    (11) INSTESTILO -> . LLAA RESTILO LLAC instrucciones_2 LLAA DIV RESTILO LLAC

    $end            reduce using rule 1 (init -> instrucciones .)
    LLAA            shift and go to state 8

    instruccion                    shift and go to state 9
    INSTIPO                        shift and go to state 4
    INSTEXTO                       shift and go to state 5
    INSTFUNCION                    shift and go to state 6
    INSTESTILO                     shift and go to state 7

state 3

    (3) instrucciones -> instruccion .

    LLAA            reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> INSTIPO .

    LLAA            reduce using rule 4 (instruccion -> INSTIPO .)
    $end            reduce using rule 4 (instruccion -> INSTIPO .)


state 5

    (5) instruccion -> INSTEXTO .

    LLAA            reduce using rule 5 (instruccion -> INSTEXTO .)
    $end            reduce using rule 5 (instruccion -> INSTEXTO .)


state 6

    (6) instruccion -> INSTFUNCION .

    LLAA            reduce using rule 6 (instruccion -> INSTFUNCION .)
    $end            reduce using rule 6 (instruccion -> INSTFUNCION .)


state 7

    (7) instruccion -> INSTESTILO .

    LLAA            reduce using rule 7 (instruccion -> INSTESTILO .)
    $end            reduce using rule 7 (instruccion -> INSTESTILO .)


state 8

    (8) INSTIPO -> LLAA . RTIPO LLAC instrucciones_2 LLAA DIV RTIPO LLAC
    (9) INSTEXTO -> LLAA . RTEXTO LLAC CADENA LLAA DIV RTEXTO LLAC
    (10) INSTFUNCION -> LLAA . RFUNCION IGUAL RESCRIBIR LLAC instrucciones_2 LLAA DIV RFUNCION LLAC
    (11) INSTESTILO -> LLAA . RESTILO LLAC instrucciones_2 LLAA DIV RESTILO LLAC

    RTIPO           shift and go to state 10
    RTEXTO          shift and go to state 11
    RFUNCION        shift and go to state 12
    RESTILO         shift and go to state 13


state 9

    (2) instrucciones -> instrucciones instruccion .

    LLAA            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 10

    (8) INSTIPO -> LLAA RTIPO . LLAC instrucciones_2 LLAA DIV RTIPO LLAC

    LLAC            shift and go to state 14


state 11

    (9) INSTEXTO -> LLAA RTEXTO . LLAC CADENA LLAA DIV RTEXTO LLAC

    LLAC            shift and go to state 15


state 12

    (10) INSTFUNCION -> LLAA RFUNCION . IGUAL RESCRIBIR LLAC instrucciones_2 LLAA DIV RFUNCION LLAC

    IGUAL           shift and go to state 16


state 13

    (11) INSTESTILO -> LLAA RESTILO . LLAC instrucciones_2 LLAA DIV RESTILO LLAC

    LLAC            shift and go to state 17


state 14

    (8) INSTIPO -> LLAA RTIPO LLAC . instrucciones_2 LLAA DIV RTIPO LLAC
    (12) instrucciones_2 -> . instrucciones_2 instruccion_2
    (13) instrucciones_2 -> . instruccion_2
    (14) instruccion_2 -> . LLAA ROPERACION IGUAL tipo LLAC instrucciones_2 LLAA DIV ROPERACION LLAC
    (15) instruccion_2 -> . LLAA RNUMERO LLAC DECIMAL LLAA DIV RNUMERO LLAC
    (16) instruccion_2 -> . LLAA RNUMERO LLAC ENTERO LLAA DIV RNUMERO LLAC
    (17) instruccion_2 -> . CADENA
    (18) instruccion_2 -> . LLAA RTITULO LLAC ROPERACIONES LLAA DIV RTITULO LLAC
    (19) instruccion_2 -> . LLAA RDESCRIPCION LLAC CORA RTEXTO2 CORC LLAA DIV RDESCRIPCION LLAC
    (20) instruccion_2 -> . LLAA RCONTENIDO LLAC CORA RTIPO2 CORC LLAA DIV RCONTENIDO LLAC
    (21) instruccion_2 -> . LLAA RTITULO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (22) instruccion_2 -> . LLAA RDESCRIPCION RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (23) instruccion_2 -> . LLAA RCONTENIDO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    LLAA            shift and go to state 18
    CADENA          shift and go to state 21

    instrucciones_2                shift and go to state 19
    instruccion_2                  shift and go to state 20

state 15

    (9) INSTEXTO -> LLAA RTEXTO LLAC . CADENA LLAA DIV RTEXTO LLAC

    CADENA          shift and go to state 22


state 16

    (10) INSTFUNCION -> LLAA RFUNCION IGUAL . RESCRIBIR LLAC instrucciones_2 LLAA DIV RFUNCION LLAC

    RESCRIBIR       shift and go to state 23


state 17

    (11) INSTESTILO -> LLAA RESTILO LLAC . instrucciones_2 LLAA DIV RESTILO LLAC
    (12) instrucciones_2 -> . instrucciones_2 instruccion_2
    (13) instrucciones_2 -> . instruccion_2
    (14) instruccion_2 -> . LLAA ROPERACION IGUAL tipo LLAC instrucciones_2 LLAA DIV ROPERACION LLAC
    (15) instruccion_2 -> . LLAA RNUMERO LLAC DECIMAL LLAA DIV RNUMERO LLAC
    (16) instruccion_2 -> . LLAA RNUMERO LLAC ENTERO LLAA DIV RNUMERO LLAC
    (17) instruccion_2 -> . CADENA
    (18) instruccion_2 -> . LLAA RTITULO LLAC ROPERACIONES LLAA DIV RTITULO LLAC
    (19) instruccion_2 -> . LLAA RDESCRIPCION LLAC CORA RTEXTO2 CORC LLAA DIV RDESCRIPCION LLAC
    (20) instruccion_2 -> . LLAA RCONTENIDO LLAC CORA RTIPO2 CORC LLAA DIV RCONTENIDO LLAC
    (21) instruccion_2 -> . LLAA RTITULO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (22) instruccion_2 -> . LLAA RDESCRIPCION RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (23) instruccion_2 -> . LLAA RCONTENIDO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    LLAA            shift and go to state 18
    CADENA          shift and go to state 21

    instrucciones_2                shift and go to state 24
    instruccion_2                  shift and go to state 20

state 18

    (14) instruccion_2 -> LLAA . ROPERACION IGUAL tipo LLAC instrucciones_2 LLAA DIV ROPERACION LLAC
    (15) instruccion_2 -> LLAA . RNUMERO LLAC DECIMAL LLAA DIV RNUMERO LLAC
    (16) instruccion_2 -> LLAA . RNUMERO LLAC ENTERO LLAA DIV RNUMERO LLAC
    (18) instruccion_2 -> LLAA . RTITULO LLAC ROPERACIONES LLAA DIV RTITULO LLAC
    (19) instruccion_2 -> LLAA . RDESCRIPCION LLAC CORA RTEXTO2 CORC LLAA DIV RDESCRIPCION LLAC
    (20) instruccion_2 -> LLAA . RCONTENIDO LLAC CORA RTIPO2 CORC LLAA DIV RCONTENIDO LLAC
    (21) instruccion_2 -> LLAA . RTITULO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (22) instruccion_2 -> LLAA . RDESCRIPCION RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (23) instruccion_2 -> LLAA . RCONTENIDO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    ROPERACION      shift and go to state 25
    RNUMERO         shift and go to state 26
    RTITULO         shift and go to state 27
    RDESCRIPCION    shift and go to state 28
    RCONTENIDO      shift and go to state 29


state 19

    (8) INSTIPO -> LLAA RTIPO LLAC instrucciones_2 . LLAA DIV RTIPO LLAC
    (12) instrucciones_2 -> instrucciones_2 . instruccion_2
    (14) instruccion_2 -> . LLAA ROPERACION IGUAL tipo LLAC instrucciones_2 LLAA DIV ROPERACION LLAC
    (15) instruccion_2 -> . LLAA RNUMERO LLAC DECIMAL LLAA DIV RNUMERO LLAC
    (16) instruccion_2 -> . LLAA RNUMERO LLAC ENTERO LLAA DIV RNUMERO LLAC
    (17) instruccion_2 -> . CADENA
    (18) instruccion_2 -> . LLAA RTITULO LLAC ROPERACIONES LLAA DIV RTITULO LLAC
    (19) instruccion_2 -> . LLAA RDESCRIPCION LLAC CORA RTEXTO2 CORC LLAA DIV RDESCRIPCION LLAC
    (20) instruccion_2 -> . LLAA RCONTENIDO LLAC CORA RTIPO2 CORC LLAA DIV RCONTENIDO LLAC
    (21) instruccion_2 -> . LLAA RTITULO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (22) instruccion_2 -> . LLAA RDESCRIPCION RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (23) instruccion_2 -> . LLAA RCONTENIDO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    LLAA            shift and go to state 30
    CADENA          shift and go to state 21

    instruccion_2                  shift and go to state 31

state 20

    (13) instrucciones_2 -> instruccion_2 .

    LLAA            reduce using rule 13 (instrucciones_2 -> instruccion_2 .)
    CADENA          reduce using rule 13 (instrucciones_2 -> instruccion_2 .)


state 21

    (17) instruccion_2 -> CADENA .

    LLAA            reduce using rule 17 (instruccion_2 -> CADENA .)
    CADENA          reduce using rule 17 (instruccion_2 -> CADENA .)


state 22

    (9) INSTEXTO -> LLAA RTEXTO LLAC CADENA . LLAA DIV RTEXTO LLAC

    LLAA            shift and go to state 32


state 23

    (10) INSTFUNCION -> LLAA RFUNCION IGUAL RESCRIBIR . LLAC instrucciones_2 LLAA DIV RFUNCION LLAC

    LLAC            shift and go to state 33


state 24

    (11) INSTESTILO -> LLAA RESTILO LLAC instrucciones_2 . LLAA DIV RESTILO LLAC
    (12) instrucciones_2 -> instrucciones_2 . instruccion_2
    (14) instruccion_2 -> . LLAA ROPERACION IGUAL tipo LLAC instrucciones_2 LLAA DIV ROPERACION LLAC
    (15) instruccion_2 -> . LLAA RNUMERO LLAC DECIMAL LLAA DIV RNUMERO LLAC
    (16) instruccion_2 -> . LLAA RNUMERO LLAC ENTERO LLAA DIV RNUMERO LLAC
    (17) instruccion_2 -> . CADENA
    (18) instruccion_2 -> . LLAA RTITULO LLAC ROPERACIONES LLAA DIV RTITULO LLAC
    (19) instruccion_2 -> . LLAA RDESCRIPCION LLAC CORA RTEXTO2 CORC LLAA DIV RDESCRIPCION LLAC
    (20) instruccion_2 -> . LLAA RCONTENIDO LLAC CORA RTIPO2 CORC LLAA DIV RCONTENIDO LLAC
    (21) instruccion_2 -> . LLAA RTITULO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (22) instruccion_2 -> . LLAA RDESCRIPCION RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (23) instruccion_2 -> . LLAA RCONTENIDO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    LLAA            shift and go to state 34
    CADENA          shift and go to state 21

    instruccion_2                  shift and go to state 31

state 25

    (14) instruccion_2 -> LLAA ROPERACION . IGUAL tipo LLAC instrucciones_2 LLAA DIV ROPERACION LLAC

    IGUAL           shift and go to state 35


state 26

    (15) instruccion_2 -> LLAA RNUMERO . LLAC DECIMAL LLAA DIV RNUMERO LLAC
    (16) instruccion_2 -> LLAA RNUMERO . LLAC ENTERO LLAA DIV RNUMERO LLAC

    LLAC            shift and go to state 36


state 27

    (18) instruccion_2 -> LLAA RTITULO . LLAC ROPERACIONES LLAA DIV RTITULO LLAC
    (21) instruccion_2 -> LLAA RTITULO . RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    LLAC            shift and go to state 37
    RCOLOR          shift and go to state 38


state 28

    (19) instruccion_2 -> LLAA RDESCRIPCION . LLAC CORA RTEXTO2 CORC LLAA DIV RDESCRIPCION LLAC
    (22) instruccion_2 -> LLAA RDESCRIPCION . RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    LLAC            shift and go to state 39
    RCOLOR          shift and go to state 40


state 29

    (20) instruccion_2 -> LLAA RCONTENIDO . LLAC CORA RTIPO2 CORC LLAA DIV RCONTENIDO LLAC
    (23) instruccion_2 -> LLAA RCONTENIDO . RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    LLAC            shift and go to state 41
    RCOLOR          shift and go to state 42


state 30

    (8) INSTIPO -> LLAA RTIPO LLAC instrucciones_2 LLAA . DIV RTIPO LLAC
    (14) instruccion_2 -> LLAA . ROPERACION IGUAL tipo LLAC instrucciones_2 LLAA DIV ROPERACION LLAC
    (15) instruccion_2 -> LLAA . RNUMERO LLAC DECIMAL LLAA DIV RNUMERO LLAC
    (16) instruccion_2 -> LLAA . RNUMERO LLAC ENTERO LLAA DIV RNUMERO LLAC
    (18) instruccion_2 -> LLAA . RTITULO LLAC ROPERACIONES LLAA DIV RTITULO LLAC
    (19) instruccion_2 -> LLAA . RDESCRIPCION LLAC CORA RTEXTO2 CORC LLAA DIV RDESCRIPCION LLAC
    (20) instruccion_2 -> LLAA . RCONTENIDO LLAC CORA RTIPO2 CORC LLAA DIV RCONTENIDO LLAC
    (21) instruccion_2 -> LLAA . RTITULO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (22) instruccion_2 -> LLAA . RDESCRIPCION RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (23) instruccion_2 -> LLAA . RCONTENIDO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    DIV             shift and go to state 43
    ROPERACION      shift and go to state 25
    RNUMERO         shift and go to state 26
    RTITULO         shift and go to state 27
    RDESCRIPCION    shift and go to state 28
    RCONTENIDO      shift and go to state 29


state 31

    (12) instrucciones_2 -> instrucciones_2 instruccion_2 .

    LLAA            reduce using rule 12 (instrucciones_2 -> instrucciones_2 instruccion_2 .)
    CADENA          reduce using rule 12 (instrucciones_2 -> instrucciones_2 instruccion_2 .)


state 32

    (9) INSTEXTO -> LLAA RTEXTO LLAC CADENA LLAA . DIV RTEXTO LLAC

    DIV             shift and go to state 44


state 33

    (10) INSTFUNCION -> LLAA RFUNCION IGUAL RESCRIBIR LLAC . instrucciones_2 LLAA DIV RFUNCION LLAC
    (12) instrucciones_2 -> . instrucciones_2 instruccion_2
    (13) instrucciones_2 -> . instruccion_2
    (14) instruccion_2 -> . LLAA ROPERACION IGUAL tipo LLAC instrucciones_2 LLAA DIV ROPERACION LLAC
    (15) instruccion_2 -> . LLAA RNUMERO LLAC DECIMAL LLAA DIV RNUMERO LLAC
    (16) instruccion_2 -> . LLAA RNUMERO LLAC ENTERO LLAA DIV RNUMERO LLAC
    (17) instruccion_2 -> . CADENA
    (18) instruccion_2 -> . LLAA RTITULO LLAC ROPERACIONES LLAA DIV RTITULO LLAC
    (19) instruccion_2 -> . LLAA RDESCRIPCION LLAC CORA RTEXTO2 CORC LLAA DIV RDESCRIPCION LLAC
    (20) instruccion_2 -> . LLAA RCONTENIDO LLAC CORA RTIPO2 CORC LLAA DIV RCONTENIDO LLAC
    (21) instruccion_2 -> . LLAA RTITULO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (22) instruccion_2 -> . LLAA RDESCRIPCION RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (23) instruccion_2 -> . LLAA RCONTENIDO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    LLAA            shift and go to state 18
    CADENA          shift and go to state 21

    instrucciones_2                shift and go to state 45
    instruccion_2                  shift and go to state 20

state 34

    (11) INSTESTILO -> LLAA RESTILO LLAC instrucciones_2 LLAA . DIV RESTILO LLAC
    (14) instruccion_2 -> LLAA . ROPERACION IGUAL tipo LLAC instrucciones_2 LLAA DIV ROPERACION LLAC
    (15) instruccion_2 -> LLAA . RNUMERO LLAC DECIMAL LLAA DIV RNUMERO LLAC
    (16) instruccion_2 -> LLAA . RNUMERO LLAC ENTERO LLAA DIV RNUMERO LLAC
    (18) instruccion_2 -> LLAA . RTITULO LLAC ROPERACIONES LLAA DIV RTITULO LLAC
    (19) instruccion_2 -> LLAA . RDESCRIPCION LLAC CORA RTEXTO2 CORC LLAA DIV RDESCRIPCION LLAC
    (20) instruccion_2 -> LLAA . RCONTENIDO LLAC CORA RTIPO2 CORC LLAA DIV RCONTENIDO LLAC
    (21) instruccion_2 -> LLAA . RTITULO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (22) instruccion_2 -> LLAA . RDESCRIPCION RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (23) instruccion_2 -> LLAA . RCONTENIDO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    DIV             shift and go to state 46
    ROPERACION      shift and go to state 25
    RNUMERO         shift and go to state 26
    RTITULO         shift and go to state 27
    RDESCRIPCION    shift and go to state 28
    RCONTENIDO      shift and go to state 29


state 35

    (14) instruccion_2 -> LLAA ROPERACION IGUAL . tipo LLAC instrucciones_2 LLAA DIV ROPERACION LLAC
    (32) tipo -> . RSUMA
    (33) tipo -> . RRESTA
    (34) tipo -> . RMULTIPLICACION
    (35) tipo -> . RDIVISION
    (36) tipo -> . RINVERSO

    RSUMA           shift and go to state 48
    RRESTA          shift and go to state 49
    RMULTIPLICACION shift and go to state 50
    RDIVISION       shift and go to state 51
    RINVERSO        shift and go to state 52

    tipo                           shift and go to state 47

state 36

    (15) instruccion_2 -> LLAA RNUMERO LLAC . DECIMAL LLAA DIV RNUMERO LLAC
    (16) instruccion_2 -> LLAA RNUMERO LLAC . ENTERO LLAA DIV RNUMERO LLAC

    DECIMAL         shift and go to state 53
    ENTERO          shift and go to state 54


state 37

    (18) instruccion_2 -> LLAA RTITULO LLAC . ROPERACIONES LLAA DIV RTITULO LLAC

    ROPERACIONES    shift and go to state 55


state 38

    (21) instruccion_2 -> LLAA RTITULO RCOLOR . IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    IGUAL           shift and go to state 56


state 39

    (19) instruccion_2 -> LLAA RDESCRIPCION LLAC . CORA RTEXTO2 CORC LLAA DIV RDESCRIPCION LLAC

    CORA            shift and go to state 57


state 40

    (22) instruccion_2 -> LLAA RDESCRIPCION RCOLOR . IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    IGUAL           shift and go to state 58


state 41

    (20) instruccion_2 -> LLAA RCONTENIDO LLAC . CORA RTIPO2 CORC LLAA DIV RCONTENIDO LLAC

    CORA            shift and go to state 59


state 42

    (23) instruccion_2 -> LLAA RCONTENIDO RCOLOR . IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    IGUAL           shift and go to state 60


state 43

    (8) INSTIPO -> LLAA RTIPO LLAC instrucciones_2 LLAA DIV . RTIPO LLAC

    RTIPO           shift and go to state 61


state 44

    (9) INSTEXTO -> LLAA RTEXTO LLAC CADENA LLAA DIV . RTEXTO LLAC

    RTEXTO          shift and go to state 62


state 45

    (10) INSTFUNCION -> LLAA RFUNCION IGUAL RESCRIBIR LLAC instrucciones_2 . LLAA DIV RFUNCION LLAC
    (12) instrucciones_2 -> instrucciones_2 . instruccion_2
    (14) instruccion_2 -> . LLAA ROPERACION IGUAL tipo LLAC instrucciones_2 LLAA DIV ROPERACION LLAC
    (15) instruccion_2 -> . LLAA RNUMERO LLAC DECIMAL LLAA DIV RNUMERO LLAC
    (16) instruccion_2 -> . LLAA RNUMERO LLAC ENTERO LLAA DIV RNUMERO LLAC
    (17) instruccion_2 -> . CADENA
    (18) instruccion_2 -> . LLAA RTITULO LLAC ROPERACIONES LLAA DIV RTITULO LLAC
    (19) instruccion_2 -> . LLAA RDESCRIPCION LLAC CORA RTEXTO2 CORC LLAA DIV RDESCRIPCION LLAC
    (20) instruccion_2 -> . LLAA RCONTENIDO LLAC CORA RTIPO2 CORC LLAA DIV RCONTENIDO LLAC
    (21) instruccion_2 -> . LLAA RTITULO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (22) instruccion_2 -> . LLAA RDESCRIPCION RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (23) instruccion_2 -> . LLAA RCONTENIDO RCOLOR IGUAL COLOR RTAMANIO IGUAL ENTERO DIV LLAC

    LLAA            shift and go to state 63
    CADENA          shift and go to state 21

    instruccion_2                  shift and go to state 31

state 46

    (11) INSTESTILO -> LLAA RESTILO LLAC instrucciones_2 LLAA DIV . RESTILO LLAC

    RESTILO         shift and go to state 64


state 47

    (14) instruccion_2 -> LLAA ROPERACION IGUAL tipo . LLAC instrucciones_2 LLAA DIV ROPERACION LLAC

    LLAC            shift and go to state 65


state 48

    (32) tipo -> RSUMA .

    LLAC            reduce using rule 32 (tipo -> RSUMA .)


state 49

    (33) tipo -> RRESTA .

    LLAC            reduce using rule 33 (tipo -> RRESTA .)


state 50

    (34) tipo -> RMULTIPLICACION .

    LLAC            reduce using rule 34 (tipo -> RMULTIPLICACION .)


state 51

    (35) tipo -> RDIVISION .

    LLAC            reduce using rule 35 (tipo -> RDIVISION .)


state 52

    (36) tipo -> RINVERSO .

    LLAC            reduce using rule 36 (tipo -> RINVERSO .)


state 53

    (15) instruccion_2 -> LLAA RNUMERO LLAC DECIMAL . LLAA DIV RNUMERO LLAC

    LLAA            shift and go to state 66


state 54

    (16) instruccion_2 -> LLAA RNUMERO LLAC ENTERO . LLAA DIV RNUMERO LLAC

    LLAA            shift and go to state 67


state 55

    (18) instruccion_2 -> LLAA RTITULO LLAC ROPERACIONES . LLAA DIV RTITULO LLAC

    LLAA            shift and go to state 68


state 56

    (21) instruccion_2 -> LLAA RTITULO RCOLOR IGUAL . COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (24) COLOR -> . RAZUL
    (25) COLOR -> . RVERDE
    (26) COLOR -> . RROJO
    (27) COLOR -> . RNEGRO
    (28) COLOR -> . RBLANCO
    (29) COLOR -> . RGRIS
    (30) COLOR -> . RCELESTE
    (31) COLOR -> . RCAFE

    RAZUL           shift and go to state 70
    RVERDE          shift and go to state 71
    RROJO           shift and go to state 72
    RNEGRO          shift and go to state 73
    RBLANCO         shift and go to state 74
    RGRIS           shift and go to state 75
    RCELESTE        shift and go to state 76
    RCAFE           shift and go to state 77

    COLOR                          shift and go to state 69

state 57

    (19) instruccion_2 -> LLAA RDESCRIPCION LLAC CORA . RTEXTO2 CORC LLAA DIV RDESCRIPCION LLAC

    RTEXTO2         shift and go to state 78


state 58

    (22) instruccion_2 -> LLAA RDESCRIPCION RCOLOR IGUAL . COLOR RTAMANIO IGUAL ENTERO DIV LLAC
    (24) COLOR -> . RAZUL
    (25) COLOR -> . RVERDE
    (26) COLOR -> . RROJO
    (27) COLOR -> . RNEGRO
    (28) COLOR -> . RBLANCO
    (29) COLOR -> . RGRIS
    (30) COLOR -> . RCELESTE
    (31) COLOR -> . RCAFE

    RAZUL           shift and go to state 70
    RVERDE          shift and go to state 71
    RROJO           shift and go to state 72
    RNEGRO          shift and go to state 73
    RBLANCO         shift and go to state 74
    RGRIS           shift and go to state 75
    RCELESTE        shift and go to state 76
    RCAFE           shift and go to state 77

    COLOR                          shift and go to state 79

state 59

    (20) instruccion_2 -> LLAA RCONTENIDO LLAC CORA . RTIPO2 CORC LLAA DIV RCONTENIDO LLAC

    RTIPO2          shift and go to state 80


state 60
